--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
-  "packageManager": "pnpm@9.12.1",
+	"packageManager": "pnpm@9.12.1",
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/kit": "^2.5.8",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
-		"@types/reveal.js": "^5.0.3",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.3",
-		"prettier-plugin-tailwindcss": "^0.5.14",
-		"shiki": "^1.6.0",
-		"shiki-magic-move": "^0.4.2",
-		"svelte": "^5.0.0-next.262",
-		"svelte-check": "^3.7.1",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.11"
+		"@sveltejs/adapter-auto": "^3.2.5",
+		"@sveltejs/kit": "^2.6.3",
+		"@sveltejs/vite-plugin-svelte": "4.0.0-next.7",
+		"@types/reveal.js": "^5.0.4",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"shiki": "^1.22.0",
+		"shiki-magic-move": "^0.4.5",
+		"svelte": "5.0.0-next.262",
+		"svelte-check": "^4.0.4",
+		"tslib": "^2.7.0",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.8"
 	},
 	"dependencies": {
-		"@animotion/core": "*",
-		"@animotion/motion": "*",
-		"@fontsource-variable/jetbrains-mono": "^5.0.21",
-		"@fontsource-variable/manrope": "^5.0.20",
+		"@animotion/core": "^1.0.23",
+		"@animotion/motion": "^1.0.1",
+		"@fontsource-variable/jetbrains-mono": "^5.1.1",
+		"@fontsource-variable/manrope": "^5.1.0",
 		"@tailwindcss/vite": "4.0.0-alpha.14",
 		"reveal.js": "^5.1.0",
 		"tailwindcss": "4.0.0-alpha.14"
