--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
 	"semi": false,
-	"useTabs": true,
+	"useTabs": false,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
+	"trailingComma": "es5",
+	"printWidth": 120,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
